Excel-like features: 20 empty rows, Enter key creates new row, Insert Row buttons

--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
             <button onclick="recalculateProject()">Recalculate</button>
             <button onclick="indentSelection()">Indent (Alt+Right)</button>
             <button onclick="outdentSelection()">Outdent (Alt+Left)</button>
+            <button onclick="insertRowAbove()" style="background-color: #2196F3; color: white;">Insert Row Above</button>
+            <button onclick="insertRowBelow()" style="background-color: #2196F3; color: white;">Insert Row Below</button>
             <button onclick="exportProject()">Export to File</button>
             <button onclick="downloadAutoExport()" style="background-color: #4CAF50; color: white;">Download Auto-Export</button>
             <label class="file-input-label">
