Fix: Indent/outdent working, Gantt chart on left like MS Project, better Gantt updates

--- a/index.html
+++ b/index.html
@@ -45,10 +45,11 @@
             </div>
         </div>
 
-        <div id="myGrid" class="ag-theme-alpine"></div>
-        
-        <div class="gantt-container">
-            <svg id="gantt"></svg>
+        <div class="main-content">
+            <div class="gantt-container">
+                <svg id="gantt"></svg>
+            </div>
+            <div id="myGrid" class="ag-theme-alpine"></div>
         </div>
     </div>
 
