--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
             <button onclick="outdentSelection()">Outdent (Alt+Left)</button>
             <button onclick="insertRowAbove()" style="background-color: #2196F3; color: white;">Insert Row Above</button>
             <button onclick="insertRowBelow()" style="background-color: #2196F3; color: white;">Insert Row Below</button>
+            <button onclick="expandAll()" style="background-color: #FF9800; color: white;">Expand All</button>
+            <button onclick="collapseAll()" style="background-color: #FF9800; color: white;">Collapse All</button>
             <button onclick="exportProject()">Export to File</button>
             <button onclick="downloadAutoExport()" style="background-color: #4CAF50; color: white;">Download Auto-Export</button>
             <label class="file-input-label">
@@ -46,10 +48,10 @@
         </div>
 
         <div class="main-content">
+            <div id="myGrid" class="ag-theme-alpine"></div>
             <div class="gantt-container">
                 <svg id="gantt"></svg>
             </div>
-            <div id="myGrid" class="ag-theme-alpine"></div>
         </div>
     </div>
 
